# swarm-simulator

./: .gitignore  README.md  evaluator.py  pyproject.toml  visualize.py
swarm/: __init__.py  base.py  types.py  utils.py
swarm/algos/: CSO.py  GA.py  GWO.py  PSO.py  QCSO.py  QGWO.py  QPSO.py  SA.py
swarm/test/: batch.py  evaluator.py
