[tool.poetry]
name = "swarm-simlator"
version = "0.1.0"
description = ""
authors = ["syrinka <syrinka@foxmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^2.1.3"
matplotlib = "^3.9.2"
tqdm = "^4.67.1"

[tool.poetry.group.dev.dependencies]
icecream = "^2.1.3"

[tool.pyright]
include = ["*.py"]

[tool.ruff]
select = [
    "E", "W", # pycodestyle
    "B",      # flake8-bugbear
    "FBT",    # flake8-boolean-trap
    "COM",    # flake8-commas
    "Q",      # flake8-quotes
    "RSE",    # flake8-raise
    "RET",    # flake8-return
    "ARG",    # flake8-unused-arguments
    "FIX",    # flake8-fixme
    "PL",     # pylint
    "I",      # isort
]
fixable = ["ALL"]

[tool.ruff.flake8-quotes]
inline-quotes = "single"
multiline-quotes = "single"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
